// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calendar-base.ts should generate classes 1`] = `
Object {
  "v-future": false,
  "v-outside": false,
  "v-past": false,
  "v-present": false,
}
`;

exports[`calendar-base.ts should generate classes with outside 1`] = `
Object {
  "v-future": false,
  "v-outside": true,
  "v-past": false,
  "v-present": false,
}
`;
